Fix footer layout bug

--- a/global.css
+++ b/global.css
@@ -33,7 +33,6 @@ header {
 *,
 *:before,
 *:after {
-    /* prevents padding from affecting height and width */
     box-sizing: border-box;
 }
 
@@ -74,16 +73,19 @@ header {
 
 footer {
     margin-top: auto;
+    padding-block: 4px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 2px;
+    gap: 2px;
     width: 100%;
+
 }
 
 footer>div>p:first-child,
-footer>div>a:link, footer>div>a:visited {
+footer>div>a:link,
+footer>div>a:visited {
     text-decoration: none;
     color: var(--footerTextColorGray);
 }
